# bible-rag

./: .gitignore  README.md  pyproject.toml
src/bible_rag/: bible_rag.py  version_codes.py
